Safari365 Prod/src/objects/TriggerObjectMapping__mdt.object
<CustomObject>
    <description>This setting is used to manage the lookup field on the cross object and used in integration with Tourplan</description>
    <fields>
        <fullName>SourceFieldType__c</fullName>
        <label>SourceFieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>SourceField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceLookupField__c</fullName>
        <label>SourceLookupField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <label>SourceObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>TargetField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <label>TargetObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TriggerObjectMapping</label>
    <pluralLabel>TriggerObjectMappings</pluralLabel>
</CustomObject>